# era-boojum-validator-cli

./: .gitignore  CONTRIBUTION.md  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: validate-pr.yaml
abis/: IExecutor.json  IVerifier.json  IZKChain.json  IZkSync.json  executor.json
crypto/: Cargo.toml  README.md
crypto/src/: lib.rs  serialize.rs  types.rs
crypto/src/flonk/: mod.rs  prover.rs  test.rs  utils.rs  verifier.rs
crypto/src/flonk/definitions/: circuit.rs  copy_permutation.rs  gates.rs  lookup.rs  mod.rs  proof.rs  setup.rs
example_proofs/snark_wrapper/: README.md
example_proofs/snark_wrapper/v2/: snark_verification_scheduler_key.json
example_proofs/snark_wrapper/v5/: commit.calldata  execute.calldata  prove.calldata
src/: batch.rs  block_header.rs  boojum_os.rs  contract.rs  crypto.rs  inputs.rs  main.rs  outputs.rs  params.rs  requests.rs  snark_wrapper_verifier.rs  utils.rs
src/keys/: verification_basic_10_key.json  verification_leaf_13_key.json  verification_leaf_1_key.json  verification_node_key.json  verification_scheduler_key.json  verification_scheduler_key_v5.json
src/keys/protocol_version/18/: scheduler_key.json
src/keys/protocol_version/24/: scheduler_key.json  scheduler_key_v0.json
src/keys/protocol_version/25/: scheduler_key.json
src/keys/protocol_version/27/: fflonk_scheduler_key.json  scheduler_key.json
src/keys/protocol_version/28/: fflonk_scheduler_key.json  scheduler_key.json
