[package]
name = "era-boojum-validator-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
circuit_definitions = {git = "https://github.com/matter-labs/era-zkevm_test_harness.git", branch="v1.4.0"}

hex = "*"
bincode = "*"
colored = "2.0"
serde_json = "*"
serde = {version = "1", features = ["derive"]}
clap = { version = "4.2.4", features = ["derive"] }
anyhow = "*"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
ethers = {version = "1", features = ["ws", "rustls"]}
sha3 = "*"

