[package]
name = "era-boojum-validator-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
circuit_definitions = "0.151.3"
# circuit_definitions = { path = "../zkevm_test_harness/circuit_definitions"}
codegen = { package = "zksync_solidity_vk_codegen", version = "=0.31.0" }
#codegen = { path = "../solidity_plonk_verifier/codegen" }

zksync_types = { git = "https://github.com/matter-labs/zksync-era.git", branch = "main", package = "zksync_types" }
fflonk = "=0.31.0"

hex = "*"
bincode = { version = "2.0.0", features = ["serde"] }
colored = "2.0"
serde_json = "*"
serde_repr = "0.1.17"
serde = {version = "1", features = ["derive"]}
clap = { version = "4.2.4", features = ["derive"] }
anyhow = "*"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
ethers = {version = "1", features = ["ws", "rustls"]}
sha3 = "*"
once_cell = "1.7"
primitive-types = "0.12.2"

gag = "1.0.0"

crypto = { path = "./crypto" }
